2008-11-18  Bart Veer  <bartv@ecoscentric.com>

	* whole package. Replace the original M68K port.

2008-11-17  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_m68k_mcf52xx.cdl, doc/mcf52xx.sgml, include/hal_diag.h,
	include/var_arch.h, include/var_cache.h, include/var_intr.h,
	include/var_io.h, src/hal_diag.c, src/mcf52xx_asm.S: minor
	clean-ups.

2008-09-01  Bart Veer  <bartv@ecoscentric.com>

	* include/var_io.h (HAL_MCF52xx_QSPIx_QCRn_QSPI_CS_CSn): fix typo

2008-05-08  Bart Veer  <bartv@ecoscentric.com>

	* include/var_io.h (HAL_MCF52xx_GPTx_PORT): fix typo.

2008-03-18  Bart Veer  <bartv@ecoscentric.com>

	* include/var_io.h: add definitions for 32-bit CAN devices, PWM,
	RTC, MDHA, RNG and SKHA modules which are now common to many
	ColdFire processors.

2008-02-28  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_m68k_mcf52xx.cdl, src/mcf52xx.c, src/mcf52xx_asm.S: add
	variant-level support for a profiling timer using an
	mcf5282-compatible PIT.

2008-02-14  Bart Veer  <bartv@ecoscentric.com>

	* include/var_io.h, include/var_intr.h: add support for interrupt
	controllers with set/clear mask registers.

2007-03-21  Nick Garnett  <nickg@ecoscentric.com>

	* include/var_intr.h (HAL_INTERRUPT_SET_LEVEL): Two-controller
	version of this macro was same as single controller version. Fixed
	to deal with two controllers.

2007-02-04  Bart Veer  <bartv@ecoscentric.com>

	* src/hal_diag.c (hal_mcf52xx_diag_uart_init): in configurations
	where the diag init code can get called multiple times, detect
	this and skip reinitializations.

2006-12-11  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal_m68k_mcf52xx.cdl: add virtual vector support for dynamic
	baud rates, for those platforms which support it.

2006-12-03  Bart Veer  <bartv@ecoscentric.com>

	* include/var_intr.h: fix support for processors with two
	interrupt controllers.

2006-10-02  John Dallaway  <jld@ecoscentric.com>

	* doc/mcf52xx.sgml: Fix minor typographical errors.
